Fri Feb	10 09:44:10 UTC 2006 / Kjell Claesson <kjell.claesson@telia.com>

 - Apply patch from Niels Baggesen.
   * Re-imported nitram.c and nitram.h with unix style line ending.
   * Patch to al175 and gendb.
     -------
      Also, the al175 has some c++ style declarations in the middle of the
      code blocks and some non-conforming %lf format specifiers, and gendb has
      a csh style redirection that a true sh does not like. I have attached
      patches for those.
     -------

Thu Feb  9 21:00:00 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - Changes to upsdrvctl
   * execute silently by default (wasn't used consistently anyway)
   * use upsdebugx() to show additional information if wanted, which
     replaces the verbose option (this is much more flexible)
   * removed 'status' command (used to be implemented the same way as
     until nut-2.0.0, but turns out to be too limited to be useful,
     for exactly the same reason)
   * use sendsignalfn() from common instead of rolling our own

Thu Feb  9 20:45:00 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - Changes to common
   * sendsignalfn() and sendsignal() let caller know if a signal was sent
     successfully or not instead of just returning silently on errors

Thu Feb  9 19:25:20 UTC	2006 / Kjell Claesson <kjell.claesson@telia.com>

 - bcmxcp_ser.c: reduced gcc4 compiler warnings

Thu Feb  9 15:57:41 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - belkinunv.c: reduced gcc4 compiler warnings

Thu Feb  9 14:16:20 UTC	2006 / Kjell Claesson <kjell.claesson@telia.com>

 - Update to previous patch.
   * Document upsstats/upsimage enhancements in man pages.
   * Fix UPSSTATSPATH/UPSIMAGEPATH in upsstats.html and
      uppstats-single.html to be same as old default.
   * Fix the changelog entry for the upsstats/upsimage patch.

Thu Feb  9 07:15:30 UTC	2006 / Kjell Claesson <kjell.claesson@telia.com>

 - Updates and fixes to cgi client by Niklas.
   - upsstats: